# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  linter-and-test.yml
gendiff/modules/: cli_parser.py  data_loader.py  engine.py  gendiff.py  gendiff_updated.py
gendiff/scripts/: gendiff.py  gendiff_.py
tests/: test_cli_parser.py  test_gendiff.py  test_gendiff_updated.py
tests/fixtures/: result1.txt  result2_nested.txt
