[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "gendiff"
authors = ["Dmitry Kholopov <dkholopov@yandex.ru>"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
