[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "gendiff"
authors = ["Dmitry Kholopov <dkholopov@yandex.ru>"]
readme = "README.md"
packages = [
    {include = "gendiff"},
    {include = "tests"},
    {include = "gendiff/modules/*.py"},
    {include = "gendiff/scripts/*.py"}
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
